<resources>
    <string name="app_name">Schedule Assistant</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="edit_time">Edit Time</string>
    <string name="vibrate">Vibrate</string>
    <string name="error">Notice</string>
    <string name="error_name_required">Please enter a name</string>
    <string name="error_time_required">Please enter a time</string>
    <string name="error_color_required">Please select a color</string>
    <string name="error_type_required">Please select a type</string>
    <string name="error_save_template">Failed to save template, please try again</string>
    <string name="error_delete_template">Failed to delete template, please try again</string>
    <string name="error_load_templates">Failed to load templates, please try again</string>
    <string name="error_load_shift_types">Failed to load shift types, please try again</string>
    <string name="error_invalid_time_range">End time should be later than start time, please select again</string>
    <string name="error_note_too_long">Note content exceeds limit, please keep it within 200 characters</string>
    <string name="error_duplicate_shift">A shift already exists for this date. You can edit the existing shift or choose another date</string>
    <string name="error_empty_name">Please enter shift name</string>
    <string name="error_database_operation">Operation failed, please try again later</string>
    <string name="error_required_fields">Please fill in all required fields</string>
    <string name="error_date_required">Please select a date</string>
    <string name="error_shift_type_required">Please select shift type</string>
    <string name="error_invalid_date_format">Invalid date format, please select again</string>
    <string name="error_save_failed">Save failed, please try again later</string>
    <string name="invalid_date">Invalid date, please select again</string>
    <string name="empty_note">Please enter note content</string>
    <string name="note_too_long">Note content is too long, please be more concise</string>
    <string name="error_create_shift">Failed to create shift</string>
    <string name="title_home">Home</string>
    <string name="title_shift_template">Shifts</string>
    <string name="title_shift_type">Shift Types</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_stats">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_shift">Shift</string>
    <string name="day_shift">Day Shift</string>
    <string name="night_shift">Night Shift</string>
    <string name="rest_day">Rest Day</string>
    <string name="no_shift">No Shift</string>
    <string name="custom_shift">Custom Shift</string>
    <string name="today_shift">Today\'s Schedule</string>
    <string name="selected_day_shift">Selected Date Schedule</string>
    <string name="no_shift_today">No Schedule</string>
    <string name="please_select_date">Please select a date</string>
    <string name="add_note">Add Note</string>
    <string name="start_schedule">Start Schedule</string>
    <string name="next_shift">Next Shift</string>
    <string name="select_shift_type">Select Shift Type</string>
    <string name="note_input_description">Enter note content</string>
    <string name="note_hint">Enter note here</string>
    <string name="note_date_format">%1$s Note</string>
    <string name="save_note">Save Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_saved">Note saved</string>
    <string name="note_deleted">Note deleted</string>
    <string name="manage_shift_types">Manage Shift Types</string>
    <string name="edit_shift_template">Edit Shift</string>
    <string name="shift_name">Shift Name</string>
    <string name="shift_color">Shift Color</string>
    <string name="delete_template_title">Delete Shift</string>
    <string name="delete_template_message">Are you sure you want to delete this shift?</string>
    <string name="add_shift_template">Add Shift</string>
    <string name="edit_shift_template_title">Edit Shift</string>
    <string name="delete_shift_template">Delete Shift</string>
    <string name="no_shift_templates">No shifts available, click bottom right to add</string>
    <string name="select_color">Select Color</string>
    <string name="no_shift_types_available">No shift types available, click bottom right to add</string>
    <string name="add_shift_type">Add Shift Type</string>
    <string name="edit_shift_type">Edit Shift Type</string>
    <string name="delete_shift_type">Delete Shift Type</string>
    <string name="shift_type_name">Shift Type Name</string>
    <string name="shift_type_time">Shift Time</string>
    <string name="shift_type_color">Shift Type Color</string>
    <string name="shift_type_default">Default Shift</string>
    <string name="shift_type_saved">Shift type saved</string>
    <string name="shift_type_deleted">Shift type deleted</string>
    <string name="shift_type_exists">Shift type already exists</string>
    <string name="shift_type_required">Please select shift type</string>
    <string name="cannot_delete_default_shift_type">Cannot delete default shift type</string>
    <string name="confirm_delete_shift_type">Are you sure you want to delete this shift type?</string>
    <string name="shift_type_list">Shift Type List</string>
    <string name="shift_type_management">Shift Type Management</string>
    <string name="shift_type">Shift Type</string>
    <string name="add_template">Add Template</string>
    <string name="edit_template">Edit Template</string>
    <string name="delete_template">Delete Template</string>
    <string name="template_name">Template Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="template_color">Template Color</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="edit_shift">Edit Shift</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="hint_note">Add note…</string>
    <string name="refresh_widget">Refresh Widget</string>
    <string name="calendar_view_button_description">Switch to calendar view</string>
    <string name="cloud_sync_button_description">Sync Data</string>
    <string name="settings_button_description">Settings</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="no_alarms">No Alarms</string>
    <string name="select_alarm_time">Select Alarm Time</string>
    <string name="default_alarm_name">Alarm</string>
    <string name="alarm_repeat_everyday">Every Day</string>
    <string name="alarm_repeat_workday">Workdays</string>
    <string name="alarm_repeat_weekend">Weekends</string>
    <string name="alarm_repeat_once">Once</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="alarm_delete_confirm">Are you sure you want to delete this alarm?</string>
    <string name="alarm_delete_success">Alarm deleted</string>
    <string name="alarm_update_success">Alarm updated</string>
    <string name="alarm_create_success">Alarm created</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_repeat_hint">Repeat</string>
    <string name="alarm_sound_hint">Sound</string>
    <string name="alarm_vibrate_hint">Vibrate</string>
    <string name="alarm_cannot_edit_enabled">Cannot edit enabled alarm, please disable it first</string>
    <string name="disable_all_alarms">Disable All Alarms</string>
    <string name="disable_all_alarms_title">Disable All Alarms</string>
    <string name="disable_all_alarms_message">Are you sure you want to disable all alarms?</string>
    <string name="alarm_disabled">Alarm disabled, system alarm has been disabled accordingly</string>
    <string name="alarm_degraded_mode">System alarm permission not granted, will use in-app alarm notification</string>
    <string name="system_alarm_permission_title">System Alarm Permission</string>
    <string name="system_alarm_permission_message">It is recommended to grant system alarm permission to sync alarms with system clock. Without this permission, only in-app alarm notifications will be available.</string>
    <string name="exact_alarm_permission_title">Permission Required</string>
    <string name="exact_alarm_permission_message">To ensure timely alarm notifications, permission to set exact alarms is required.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="use_app_alarm_only">Use In-app Alarm Only</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="profile_name_hint">Enter nickname</string>
    <string name="profile_email_hint">Enter email</string>
    <string name="profile_title">Personal Information</string>
    <string name="profile_avatar">Avatar</string>
    <string name="profile_nickname">Nickname</string>
    <string name="profile_email">Email</string>
    <string name="profile_save_success">Profile saved successfully</string>
    <string name="profile_save_failed">Failed to save profile</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_change_avatar">Change Avatar</string>
    <string name="profile_basic_info">Basic Information</string>
    <string name="profile_saved">Profile saved</string>
    <string name="invalid_email_format">Please enter a valid email format</string>
    <string name="profile_name_not_set">Name not set</string>
    <string name="profile_email_not_set">Email not set</string>
    <string name="settings">Settings</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="theme_follow_system">Follow System</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="language_follow_system">Follow System</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_english">English</string>
    <string name="notification_enabled">Notifications enabled</string>
    <string name="notification_disabled">Notifications disabled</string>
    <string name="notification_time_updated">Notification time updated</string>
    <string name="notification_time_format">(%d minutes)</string>
    <string name="theme_updated">Theme updated</string>
    <string name="language_updated">Language updated</string>
    <string name="repeat_alarm">Repeat Alarm</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="sort_by_date_asc">Sort by Date (Ascending)</string>
    <string name="sort_by_date_desc">Sort by Date (Descending)</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="sort_by_update_time">Sort by Update Time</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thu</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday">Sat</string>
    <string name="calendar_sunday">Sun</string>
</resources>