<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shift_template"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_shift" />

    <item
        android:id="@+id/navigation_alarm"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/title_alarm" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />
</menu> 